<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtFace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_ponto_perigo" />

    <EditText
        android:id="@+id/edtItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Item 1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_face" />

    <Spinner
        android:id="@+id/spnFace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtSistemaSeguranca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_sistema_de_seguranca" />

    <Spinner
        android:id="@+id/spnSistemaSeguranca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtCumpreAnexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cumpre_anexo" />

    <Spinner
        android:id="@+id/spnCumpreAnexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/input_padding_bottom"
        android:paddingTop="@dimen/input_padding_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idtxtPerigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lbl_perigo" />

        <TextView
            android:id="@+id/txtRisco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lbl_risco" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlNome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spnPerigo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnAddPerigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_add"
                android:contentDescription="@string/lbl_adiciona_perigo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spnRisco"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btnAddRisco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_add"
                android:contentDescription="@string/lbl_adiciona_risco" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/lstPerigo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ListView
            android:id="@+id/lstRisco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>