<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/text_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.nr12.fragments.GeneralFragment">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/idTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textViewCLienteLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/label_padding_bottom"
                    android:paddingTop="@dimen/label_padding_top"
                    android:text="@string/lbl_cliente"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="352dp"
                    tools:layout_conversion_absoluteX="0dp"
                    tools:layout_conversion_absoluteY="0dp" />

                <TextView
                    android:id="@+id/txtViewCLiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/input_padding_bottom"
                    android:paddingTop="@dimen/input_padding_top"
                    android:text="@string/lbl_cliente"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="352dp"
                    tools:layout_conversion_absoluteX="0dp"
                    tools:layout_conversion_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textViewMaquinaLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/label_padding_bottom"
                    android:paddingTop="@dimen/label_padding_top"
                    android:text="@string/lbl_maquina"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="352dp"
                    tools:layout_conversion_absoluteX="0dp"
                    tools:layout_conversion_absoluteY="0dp" />

                <TextView
                    android:id="@+id/txtViewMaquina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/input_padding_bottom"
                    android:paddingTop="@dimen/input_padding_top"
                    android:text="@string/lbl_maquina"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="352dp"
                    tools:layout_conversion_absoluteX="0dp"
                    tools:layout_conversion_absoluteY="0dp" />




            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/label_padding_bottom"
                        android:paddingTop="@dimen/label_padding_top"
                        android:text="@string/lbl_data" />


                    <EditText
                        android:id="@+id/editTextData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:paddingBottom="@dimen/input_padding_bottom"
                        android:paddingTop="@dimen/input_padding_top" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewHora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/label_padding_bottom"
                        android:paddingTop="@dimen/label_padding_top"
                        android:text="@string/lbl_hora_inicial" />

                    <EditText
                        android:id="@+id/editTextTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:paddingBottom="@dimen/input_padding_bottom"
                        android:paddingTop="@dimen/input_padding_top" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
